# CS501-Deep-Learning-Complete-Course

./: .gitignore  README.md
Hands-on-projects/: README.md
Hands-on-projects/level-01/: cv-01-mnist-nnet-simple-example-v1.ipynb
Hands-on-projects/level-02/: 02-breast-cancer-project-v1.ipynb
Hands-on-projects/level-03/: 01-mnist-nnet-advanced-settings-v1.ipynb  02-mnist-nnet-advanced-settings-v2.ipynb
datasets/: .gitignore  list-of-datasets.md
dltools/: pyproject.toml
dltools/src/dltools/utils/: path.py
extra-materials/: 01-bias-variance-trade-off.md
lectures/01-PythonCrashCourse/: 01-01-hello-python.ipynb  01-03-print-function.ipynb  01-04-formatting-output.ipynb  02-01-create-variables.ipynb  02-02-variables-names.ipynb  03-primitive-data-types.ipynb  04-string-data.ipynb  05-operators.ipynb  07-control-flow-conditionals.ipynb  08-control-flow-loops.ipynb  09-functions-practice.ipynb  09-functions.ipynb  10-01-builtin-functions-range.ipynb  10-02-builtin-functions-enumerate.ipynb  10-03-builtin-functions-lambda.ipynb  10-04-builtin-functions-map.ipynb  10-05-builtin-functions-filter.ipynb  10-07-builtin-function-zip.ipynb  11-00-comprehensions.ipynb  11-03-set-comprehension.ipynb  12-01-builtin-tools-generators.ipynb  12-03-builtin-tools-type-hints.ipynb  13-02-OOP-dot-operator.ipynb  13-03-OOP-class-attributes.ipynb  13-04-OOP-setters-getters.ipynb  13-05-OOP-decorators.ipynb  13-06-OOP-inheritance.ipynb  13-07-OOP-inheritance-advanced-2.ipynb  13-07-OOP-inheritance-advanced.ipynb  13-08-OOP-polymorphysm.ipynb  (+2 more)
practice/: 01-practice-variables.ipynb
(+74 files in other folders)
